[tool.poetry]
name = "pyproject"
version = "0.0.1"
description = "Python CLI and module for project"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ['README.md']

[tool.poetry.scripts]
client = 'pyproject:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.29.0"
Sphinx = { version = "^6.2.1", optional = true }

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
mypy = "^1.2.0"
types-requests = "^2.29.0.0"
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.13.0", python = ">=3.9"}
]
pytest = "^7.3.1"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
